# src/controllers/userController.js
@@ -1,25 +1,53 @@
-const express = require('express');
-const router = express.Router();
+const User = require('../models/userModel');
 
-const { getUserProfileInfo } = require('../services/userService');
+class UserController {
+  async getUser(req, res) {
+    try {
+      const userId = req.user.userId;
+      const userInfo = await User.findOne({ _id: userId });
 
-router.get('/me', async (req, res) => {
-  const { userId } = req.user;
-
-  try {
-    const userInfo = await getUserProfileInfo(userId);
-
-    if (!userInfo) {
-      res.status(400).json({ message: 'Bad request' });
+      const userDetails = {
+        _id: userInfo._id,
+        username: userInfo.username,
+        createdDate: userInfo.createdDate,
+      };
+      res.status(200).send({ user: userDetails });
+    } catch (e) {
+      res.status(400).send({ message: e.message });
     }
-
-    const user = { _id: userInfo._id, username: userInfo.username, createdDate: userInfo.createdDate };
-    res.status(200).json({ user });
-  } catch (err) {
-    res.status(500).json({ message: 'Internal server error' });
   }
-});
 
-module.exports = {
-  userRouter: router,
-};
+  async deleteUser(req, res) {
+    try {
+      const userId = req.user.userId;
+      await User.findByIdAndRemove(userId);
+      res.status(200).send({ message: 'Success' });
+    } catch (e) {
+      res.status(400).send({ message: e.message });
+    }
+  }
+
+  async changeUserPassword(req, res) {
+    try {
+      const userId = req.user.userId;
+      const { oldPassword, newPassword } = req.body;
+      const user = await User.findOne({ _id: userId });
+
+      const isOldPasswordValid = await bcrypt.compare(oldPassword, user.password);
+
+      if (!isOldPasswordValid) {
+        return res.status(400).send({ message: 'Invalid old password' });
+      }
+
+      const newHashPassword = await bcrypt.hash(newPassword, 10);
+
+      await User.updateOne({ _id: userId }, { password: newHashPassword });
+
+      res.status(200).send({ message: 'Success' });
+    } catch (e) {
+      res.status(400).send({ message: e.message });
+    }
+  }
+}
+
+module.exports = new UserController();
